[package]
name = "querylog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pgwire = "0.16.0"
tokio = { version = "1.32.0", features = ["full", "rt", "macros"] }
async-trait = "0.1"
futures = "0.3"
futures-sink = "0.3"
futures-util = "0.3"
sqlparser = "0.37.0"
anyhow = { version = "1.0.75", features = ["backtrace"] }
postgres-types = "0.2.6"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
